@@ -1,6 +1,7 @@
 Version 1.7.1
 - BUG: Issue #88: Check for modifications on
-       multiple targets (Stefan)
+       multiple targets. (Stefan)
+- BUG: Issue #89: Crash in TSVNCache. (Stefan)
 
 Version 1.7.0
 Too many changes to list here. See the release notes for
